--- a/02-Regression.ipynb
+++ b/02-Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "6a81eafc",
    "metadata": {},
    "source": [
-    "# 🏘 Tehran House Price Prediction (Graded Version)\n",
+    "# 🏘 Tehran House Price Prediction \n",
     "\n",
     "This notebook predicts house prices (USD) in Tehran using Linear Regression.  \n",
     "It includes histograms, correlation analysis, proper evaluation, and organized cells."
